API ChangeLog 

06-Apr-2009	Joachim A. <jansorg@crosswire.org>
	Added Maltese bookname translation prepared by C. S.

30-Mar-2009	Ben Morgan
	Added new methods to SWModule:
		bool isLinked(SWKey *k1, SWKey *k2)
			- are two entries linked
		bool hasEntry(SWKey *k1)
			- does an entry for the given key exist?
	Added new methods to SWLD:
		long getEntryCount()
			- number of entries in the dictionary
		getKeyForEntry(long entry)
			- get the key for the nth entry
		getEntryForKey(const char *key)
			- get the index for the given key
	Updated strongsPad to work with keys with a prefix of G or H
	Fixed a bug in SWMgr which would load certain files in the mods.d
		directory which shouldn't have been loaded.
	Fix for divineName with non-ascii text in OSISHTMLHREF filter

07-Feb-2008	Troy A. Griffitts <scribe@crosswire.org>
	Added fallback checks for OS specific module
		locations:
			$ALLUSERSPROFILE/Application Data/sword

			~ additionally looked for at:
			$HOMEDRIVE$HOMEPATH/Application Data

			added ~/sword (note the absense of '.')

26-Dec-2008	Troy A. Griffitts <scribe@crosswire.org>
	Added list support in OSIS HTML conversion (ghellings)

23-Dec-2008	Troy A. Griffitts <scribe@crosswire.org>
	Added ignore of comment lines starting with '#'
		in SWConfig processing
	Added requirement to call setUserDisclaimerConfirmed
		in InstallMgr before remote functions operate
	Added refreshRemoteSourceConfiguration to sync a
		local InstallMgr.conf with a master remote list
	Added ability for InstallMgr to use username/passwd
		supplied by either .conf or globally in c-tor
	Added VerseMgr to abstract versification scheme
		functionality
	Included 1 versification scheme: KJV
	Added param on SWBuf::stripPrefix to allow use more
		like a safe string tokenizer to replace strtok

		
16-Dec-2008	Joachim A. <jansorg@crosswire.org>
	Added two Chinese bookname translations provided by
		F. Lee

03-Sep-2008	Troy A. Griffitts <scribe@crosswire.org>